--- a/package.json
+++ b/package.json
@@ -5,54 +5,65 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --fix && eslint 'pages/**/*.{js,ts,tsx}' --fix",
     "prettify": "prettier -c --write src/**/* && prettier -c --write pages/**/*",
     "prepare": "husky install",
+    "install:clean": "rm -rf node_modules/ && yarn",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
     "axios": "^0.26.0",
-    "immer": "^9.0.12",
     "next": "12.0.10",
-    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-saga": "^1.1.3",
-    "reselect": "^4.1.5"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.2.2",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-redux": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.0",
+    "immer": "^9.0.12",
     "lint-staged": "^11.1.2",
+    "next-redux-wrapper": "^7.0.5",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.5",
+    "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "bash scripts/log-alert-hook.sh && lint-staged"
     }
   },
   "lint-staged": {
     "src/**/*.{js,ts,tsx}": [
-      "yarn run lint",
-      "yarn run prettify",
+      "eslint 'src/**/*.{js,ts,tsx}' --fix",
+      "prettier -c --write src/**/*",
       "git add --force"
     ],
     "pages/**/*.{js,ts,tsx}": [
-      "yarn run lint",
-      "yarn run prettify",
+      "eslint 'pages/**/*.{js,ts,tsx}' --fix",
+      "prettier -c --write pages/**/*",
       "git add --force"
     ]
   }
