--- a/package.json
+++ b/package.json
@@ -12,43 +12,43 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "next": "12.3.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
+    "next": "13.1.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.2",
+    "reselect": "^4.1.7"
   },
   "devDependencies": {
-    "@redux-devtools/extension": "^3.2.3",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "autoprefixer": "^10.4.11",
-    "eslint": "8.23.1",
+    "@types/node": "18.11.17",
+    "@types/react": "18.0.26",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "12.3.0",
+    "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-redux": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "husky": "^8.0.1",
-    "immer": "^9.0.15",
-    "lint-staged": "^13.0.3",
-    "next-redux-wrapper": "^8.0.0",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "react-redux": "^8.0.2",
-    "redux": "^4.2.0",
-    "redux-saga": "^1.2.1",
-    "reselect": "^4.1.6",
-    "sass": "^1.54.9",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3"
+    "husky": "^8.0.2",
+    "immer": "^9.0.16",
+    "lint-staged": "^13.1.0",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   },
   "husky": {
     "hooks": {
@@ -66,5 +66,9 @@
       "prettier -c --write pages/**/*",
       "git add --force"
     ]
+  },
+  "engines": {
+    "npm": "8.19.2",
+    "node": "18.12.1"
   }
 }
